<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">医院导航</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="prompt">温馨提示</string>
    <string name="download">下载</string>
    <string name="redownload">重新下载</string>
    <string name="use">使用</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="register">注册</string>
    
    <string name="msg_login_timeout">登录超时</string>
    <string name="msg_navigation_hospital">医院导航</string>
    <string name="msg_navigation_library">图书馆</string>
    <string name="msg_show_map">查看地图</string>
    <string name="msg_exit_app">退出应用</string>
    <string name="msg_sure_exit_app">确定要退出该应用吗？</string>
    <string name="msg_exit_navigation">退出导航</string>
    <string name="msg_press_again_to_exit">再按一次退出应用</string>
    <string name="msg_please_wait">请稍候···</string>
    <string name="msg_locationing">正在定位中···</string>
    <string name="msg_path_searching">路线查询中···</string>
    <string name="msg_downloading_datafile">正在下载数据文件···</string>
    <string name="msg_clear_datafile">正在清除原始数据文件···</string>
    <string name="msg_decompressing_datafile">正在解压数据文件···</string>
    <string name="msg_importing_datafile">正在导入数据文件···</string>
    <string name="msg_location_unavailable">当前位置不可用</string>
    <string name="msg_network_connecterror">网络连接不可用，请检查网络设置</string>
    <string name="msg_error_please_try_again">糟糕，好像出错了，抱歉请稍后重试下吧</string>
    <string name="msg_use_mobile_data">当前网络环境为移动2G/3G网络，建议在Wifi环境下载,是否继续？</string>
    <string name="msg_use_mobile_data_re_download">确定需要重新下载数据包文件吗？</string>
    <string name="msg_sure_download_data">确定下载当前数据包吗？</string>
    <string name="msg_sure_switch_current_data">确定切换当前数据包为主数据吗？</string>
    <string name="msg_first_set_data_tip">目前还没有指定要访问的医院，是否马上去切换使用？</string>
    <string name="msg_data_manager">数据管理</string>
    <string name="msg_not_login">还没有登录请先登录</string>
    <string name="msg_doctor_list">医生列表</string>
    <string name="msg_open_location">开放位置权限</string>
    <string name="msg_switching_datafile_success">数据切换成功，请退出应用后重新登录</string>
    <string name="msg_download_success">下载成功</string>
    <string name="msg_register_success">注册成功</string>
    <string name="msg_forgetpwd_success">找回密码成功</string>
    <string name="msg_modifypwd_success">修改密码成功</string>
    <string name="msg_open_mylocation_success">开放好友位置成功</string>
    <string name="msg_new_version_check">新版本检测</string>
    <string name="msg_have_new_version_1">您使用的版本过低，请立即升级！否则可能无法正常使用。</string>
    <string name="msg_have_new_version_2">检测到新版本，是否升级？</string>
    <string name="msg_last_version">当前版本已经是最新</string>
    <string name="msg_account_not_empty">用户名不能为空</string>
    <string name="msg_old_password_not_empty">旧密码不能为空</string>
    <string name="msg_password_not_empty">密码不能为空</string>
    <string name="msg_code_not_empty">验证码不能为空</string>
    <string name="msg_two_password_not_diff">两次密码输入不一致</string>
    <string name="msg_friendid_not_empty">好友ID不能为空</string>
    <string name="msg_send_code_success">验证码已发送，请查看你的邮箱！</string>
    <string name="msg_you_are_sure_logout">确定退出登录，并清除自己的位置信息吗?</string>
    <string name="msg_friend_manager">好友管理</string>
    <string name="msg_relieve_friend_relation_success">解除成功，好友将无法定位到你的位置!</string>
    <string name="msg_sure_navigation_to_friend_location">确定导航到当前好友的位置点吗?</string>
    <string name="msg_sure_open_location">确定要对该好友开放自己的位置信息吗?</string>
    <string name="msg_login_error">用户名或密码有误</string>
    <string name="msg_app_title">就医导航系统</string>
    <string name="msg_send_code">发送验证码</string>
    <string name="msg_upgrade_now">立即升级</string>
    <string name="msg_later">以后再说</string>
    <string name="msg_open_mylocation">开放位置权限</string>
    <string name="msg_goto_switch_data">马上去指定医院</string>
    <string name="msg_login_autologin">自动登录</string>
    <string name="msg_login_not_account_gotto_register">还没有账号，马上去注册>></string>
    <string name="msg_hint_account">请输入账户</string>
    <string name="msg_hint_code">请输入验证码</string>
    <string name="msg_hint_old_password">请输入原密码</string>
    <string name="msg_hint_password">数字或者英文字母</string>
    <string name="msg_hint_friendid">请输入好友账户ID</string>
    <string name="msg_hint_search_department_doctor">请输入部门或医院ID</string>
    <string name="msg_tab_department">部门</string>
    <string name="msg_tab_doctor">医生</string>
    <string name="msg_tab_restroom">房间</string>
    <string name="msg_tab_drinking_water">开水间</string>
    <string name="msg_current_useing_data">该数据包当前已经正在使用中</string>
    <string name="msg_current_data_file_size">数据文件大小:%sMB</string>
    
    <string name="activity_title_navigation">项目导航</string>
    <string name="activity_title_first_set_mapdata">初始设置</string>
    <string name="activity_title_hospital_detail">医院介绍</string>
    <string name="activity_title_doctor_list">医生列表</string>
    <string name="activity_title_doctor_detail">医生介绍</string>
    <string name="activity_title_department_list">部门列表</string>
    <string name="activity_title_department_detail">部门介绍</string>
    <string name="activity_title_friend_relation_list">好友列表</string>
    <string name="activity_title_friend_relation_set">开位位置</string>
    <string name="activity_title_friend_history_list">历史好友</string>
    <string name="activity_title_map_data_list">数据列表</string>
    <string name="activity_title_map_data_detail">数据详细</string>
    <string name="activity_title_modify_pwd">修改密码</string>
    <string name="activity_title_forgetpwd">找回密码</string>
    <string name="activity_title_more">更多</string>
    
    <string name="frame_introduction_title">介绍</string>
    <string name="frame_introduction_hospital">医院介绍</string>
    <string name="frame_introduction_doctor">部门介绍</string>
    <string name="frame_introduction_department">医生介绍</string>
    <string name="frame_map_title">地图</string>
    <string name="frame_process_title">流程</string>
    <string name="frame_process_not_definitions">当前数据不存在流程定义</string>
    <string name="frame_process_next_step">下一步</string>
    <string name="frame_process_reset">重新开始</string>
    <string name="frame_friend_title">好友</string>
    
    <string name="process_2">动作类型不能为空</string>
    <string name="process_1">对话框动作消息不能为空</string>
    <string name="process_3">位置动作内容不能为空</string>
    <string name="process_4">打开浏览器动作url不能为空</string>
    <string name="process_5">流程文件定义出错:</string>
    <string name="process_6">当前节点不存在，所在节点：流程定义文件有误!</string>
    
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    
    <!-- PullToRefreshListView -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    
</resources>