<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/module_main_frame_introduction_content"
    android:orientation="vertical" 
    android:gravity="center_vertical|center_horizontal"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
    <Button 
        android:id="@+id/module_main_frame_introduction_btn_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/frame_introduction_hospital"/>
    <Button 
        android:id="@+id/module_main_frame_introduction_btn_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/frame_introduction_doctor"/>
    <Button 
        android:id="@+id/module_main_frame_introduction_btn_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/frame_introduction_department"/>
    
</LinearLayout>