<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
	    android:padding="5.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
	    android:background="@drawable/more_frame">
		<ImageView 
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_more_account"
            android:contentDescription="@string/empty"/>
        <EditText 
		    android:id="@+id/register_et_username"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    style="?android:attr/textViewStyle"
     		android:background="@null" 
     		android:textColor="@null"
		    android:onClick="onClick"
		    android:padding="5.0dip"
		    android:textSize="17.0dip"
		    android:hint="@string/msg_hint_account"/>
	</LinearLayout>
	
	<Button 
        android:id="@+id/register_btn_send_code"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
        android:onClick="onClick"
        android:background="@drawable/bg4_selector"
        android:textColor="@color/white"
        android:textSize="18.0dip"
        android:text="@string/msg_send_code"/>
	
	<LinearLayout 
	    android:id="@+id/register_ll_main_framework"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:visibility="gone"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip">
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15.0dip"
		    android:padding="5.0dip"
		    android:background="@drawable/more_frame"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
			<ImageView 
		            android:layout_width="25.0dip"
		            android:layout_height="25.0dip"
		            android:src="@drawable/ic_more_code"
		            android:contentDescription="@string/empty"/>
		        <EditText 
				    android:id="@+id/register_et_code"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    style="?android:attr/textViewStyle"
		     		android:background="@null" 
		     		android:textColor="@null"
				    android:onClick="onClick"
				    android:padding="5.0dip"
				    android:textSize="17.0dip"
				    android:hint="@string/msg_hint_code"/>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15.0dip"
		    android:padding="5.0dip"
		    android:background="@drawable/more_frame"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
			<ImageView 
	            android:layout_width="25.0dip"
	            android:layout_height="25.0dip"
	            android:src="@drawable/ic_more_pwd"
	            android:contentDescription="@string/empty"/>
	        <EditText 
			    android:id="@+id/register_et_new_password"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    style="?android:attr/textViewStyle"
			    android:inputType="textPassword"
	     		android:background="@null" 
	     		android:textColor="@null"
			    android:onClick="onClick"
			    android:padding="5.0dip"
			    android:textSize="17.0dip"
			    android:hint="@string/msg_hint_password"/>
		</LinearLayout>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15.0dip"
		    android:padding="5.0dip"
		    android:background="@drawable/more_frame"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">
			<ImageView 
	            android:layout_width="25.0dip"
	            android:layout_height="25.0dip"
	            android:src="@drawable/ic_more_pwd"
	            android:contentDescription="@string/empty"/>
	        <EditText 
			    android:id="@+id/register_et_re_new_password"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    style="?android:attr/textViewStyle"
			    android:inputType="textPassword"
	     		android:background="@null" 
	     		android:textColor="@null"
			    android:onClick="onClick"
			    android:padding="5.0dip"
			    android:textSize="17.0dip"
			    android:hint="@string/msg_hint_password"/>
		</LinearLayout>
		
		<Button 
	        android:id="@+id/register_btn_send"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15.0dip"
	        android:onClick="onClick"
	        android:background="@drawable/bg3_selector"
	        android:textColor="@color/white"
	        android:textSize="22.0dip"
	        android:text="@string/ok"/>
	</LinearLayout>
    
</LinearLayout>