<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
	<include layout="@layout/module_main_header" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
	    android:padding="5.0dip"
	    android:background="@drawable/more_frame"
        android:gravity="center_vertical"
        android:orientation="horizontal">
	    <ImageView 
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_more_pwd"
            android:contentDescription="@string/empty"/>
        <EditText 
		    android:id="@+id/modify_et_old_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    style="?android:attr/textViewStyle"
		    android:inputType="textPassword"
     		android:background="@null" 
     		android:textColor="@null"
		    android:onClick="onClick"
		    android:padding="5.0dip"
		    android:textSize="17.0dip"
		    android:hint="@string/msg_hint_old_password"/>
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
	    android:padding="5.0dip"
	    android:background="@drawable/more_frame"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView 
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_more_pwd"
            android:contentDescription="@string/empty"/>
        <EditText 
		    android:id="@+id/modify_et_new_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    style="?android:attr/textViewStyle"
		    android:inputType="textPassword"
     		android:background="@null" 
     		android:textColor="@null"
		    android:onClick="onClick"
		    android:padding="5.0dip"
		    android:textSize="17.0dip"
		    android:hint="@string/msg_hint_password"/>
		
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
	    android:padding="5.0dip"
	    android:background="@drawable/more_frame"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView 
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_more_pwd"
            android:contentDescription="@string/empty"/>
        <EditText 
		    android:id="@+id/modify_et_re_new_password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    style="?android:attr/textViewStyle"
		    android:inputType="textPassword"
     		android:background="@null" 
     		android:textColor="@null"
		    android:onClick="onClick"
		    android:padding="5.0dip"
		    android:textSize="17.0dip"
		    android:hint="@string/msg_hint_password"/>
		
	</LinearLayout>
	
	<Button 
        android:id="@+id/modify_pwd_btn_ok"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15.0dip"
	    android:layout_marginLeft="10.0dip"
	    android:layout_marginRight="10.0dip"
        android:onClick="onClick"
        android:background="@drawable/bg3_selector"
        android:textColor="@color/white"
        android:textSize="22.0dip"
        android:text="@string/ok"/>

</LinearLayout>